# src/controllers/coinController.ts
@@ -2,7 +2,7 @@ import { dbs, caches } from '../commons/globals';
 import admin from 'firebase-admin';
 import { CreateError, ErrorCodes } from '../commons/errorCodes';
 import DecodedIdToken = admin.auth.DecodedIdToken;
-import { eCoinLogType, eDonationType, eItemUsingType } from '../commons/enums';
+import { eCoinLogType, eDonationType, eItemUsingType, eRedemptionStatus } from '../commons/enums';
 import { Transaction, Op, Sequelize, QueryTypes } from 'sequelize';
 import shopController from './shopController';
 import * as _ from 'lodash';
@@ -42,6 +42,7 @@ class CoinController {
     }
 
     return await dbs.UserCoin.getTransaction(async (transaction: Transaction) => {
+      
       const fromUserCoin = await dbs.UserCoin.findOne({ user_id: userInfo.id })
       const targetUserCoin = await dbs.UserCoin.findOne({ user_id: targetUser.id }) 
       
@@ -223,18 +224,111 @@ class CoinController {
     if( !bank_account_id || !amount ){
       throw CreateError(ErrorCodes.INVALID_PARAMS);
     }
+
+    const bank_info = await dbs.UserBankAccount.findOne({
+      id: bank_account_id
+    })
+    if( !bank_info ){
+      throw CreateError(ErrorCodes.USER_NOT_EXIST_BANK_ACCOUNT);
+    }
+    if(bank_info.user_uid !== user.uid){
+      throw CreateError(ErrorCodes.ACCESS_DENY);
+    }
+
+    const coin_meta = await dbs.CoinMeta.getCoinMeta()
+
+    const min_amount = coin_meta.min_amount
+
+    if( min_amount > amount ){
+      throw CreateError(ErrorCodes.NOT_ENOUGH_MIN_AMOUNT);
+    }
     
     const userInfo = await dbs.User.findOne({ uid: user.uid })
     const userCoin = await dbs.UserCoin.findOne({ user_id: userInfo.id })
-
-    if(userCoin.zem < amount){
+    
+    if( userCoin.zem < amount ){
       throw CreateError(ErrorCodes.USER_COIN_NOT_ENOUGH_ZEM);
     }
 
-    return await dbs.UserCoin.getTransaction(async (transaction: Transaction) => {
+    return await dbs.CoinRedemption.getTransaction(async (transaction: Transaction) => {
+      
+      const commission_rate = coin_meta.commission_rate 
+      
+      await dbs.CoinRedemption.create({
+        user_uid: user.uid,
+        bank_account_id,
+        amount,
+        status: eRedemptionStatus.Processing,
+        widthraw_amount: amount - ( amount * commission_rate * 0.01) ,  
+      }, transaction)
+
+      const userCoin = await dbs.UserCoin.findOne({ user_id: userInfo.id })
+      userCoin.zem -= amount
+      await userCoin.save({ transaction })
+
+      return{
+        req_zem: amount,
+        current_zem: userCoin.zem,
+        result: eRedemptionStatus.Processing 
+      }
 
     })
 
+  }
+
+  reqRedeemCoinList = async({ limit = 10, offset = 0, sort = 'created_at', dir = 'desc', start_date , end_date } : any, user: DecodedIdToken) => {
+    let total = 0
+    if( !end_date ){
+      end_date = new Date()
+    }
+
+    if( !start_date ){
+      start_date = new Date(new Date().setDate(end_date.getDate() - 10))
+    }
+
+    const processingRedemptions = await dbs.CoinRedemption.findAll({
+      user_uid: user.uid,
+      status: eRedemptionStatus.Processing
+    })
+
+    if(processingRedemptions.length){
+      total = processingRedemptions.reduce((acc: number, redem: any) => {
+        return acc + redem.amount
+      }, 0)
+    }
+    
+
+    const { count, rows } = await dbs.CoinRedemption.findAndCountAll({
+      user_uid: user.uid,
+      created_at : {
+        [Op.between]:[Date.parse(start_date), Date.parse(end_date)]
+      },
+    },
+    {
+      include:[
+        {
+          model: dbs.UserBankAccount.model,
+        }
+      ],
+      order: [[sort, dir]],
+      limit: _.toNumber(limit),
+      offset: _.toNumber(offset),
+    })
+
+    return {
+      processing_total: total,
+      count,
+      list: rows.map((redem: any) =>{
+        return{
+          created_at: redem.created_at,
+          bank_account:redem.userBankAccount.account_num,
+          coin_amount: redem.amount,
+          cash_amount: redem.widthraw_amount,
+          memo: redem.memo,
+          status: redem.status
+        }
+      })
+    }
   }
 
   getCoinMeta = async(_: any, __: DecodedIdToken ) => {
